<resources>
    <string name="app_name">Market</string>
    <string name="login_title">LOGIN IN</string>
    <string name="mobile">mobile</string>
    <string name="password">password</string>
    <string name="submit_login">login</string>
    <string name="go_register">没有账号？去注册</string>
    <string name="remember_account">记住账户</string>
    <string name="register">register</string>
    <string name="again_password">again password</string>
    <string name="go_login">已有账号？去登陆</string>
    <string name="username">刘德华</string>
    <string name="my_coupon">我的优惠卷</string>
    <string name="sign_out">退出登录</string>
    <string name="my_order">我的订单</string>
    <string name="order_no">订单编号：20221222</string>
    <string name="order_time">下单时间:2022-11-11</string>
    <string name="product_names">商品名称1,商品名称2</string>
    <string name="product_name">商品名称1</string>
    <string name="product_price">￥799.9</string>
    <string name="product_description">商品描述</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_chinese">欢迎</string>
    <string name="add_cart">加入购物车</string>
    <string name="home">首页</string>
    <string name="me">我的</string>
    <string name="order">订单</string>
    <string name="new_product">新品推荐</string>
    <string name="popular">最近流行</string>
    <string name="product_list">商品列表</string>
    <string name="cart">购物车</string>
    <string name="total">合计</string>
    <string name="total_price">￥39.9</string>
    <string name="price">价格</string>
    <string name="discount">优惠</string>
    <string name="discount_price">￥0.0</string>
    <string name="settlement">结算</string>
    <string name="backhome">返回首页</string>
    <string name="back_home">返回首页</string>
    <string name="successfully_ordered">下单成功</string>
</resources>