<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="vertical">
       <ImageView
           android:id="@+id/product_image"
           android:layout_width="250dp"
           android:layout_height="250dp"
           android:layout_marginTop="50dp"
           android:scaleType="fitXY"
           android:src="@mipmap/loading" />
       <TextView
           android:id="@+id/product_price"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:textColor="@color/colorPrimary"
           android:textSize="25sp"
           android:text="@string/product_price"
           android:textAllCaps="false"/>
       <TextView
           android:id="@+id/product_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/black"
           android:layout_marginTop="20dp"
           android:textSize="25sp"
           android:text="@string/product_name"
           android:textAllCaps="false"/>
       <TextView
           android:id="@+id/product_desc"
           android:layout_width="wrap_content"
           android:layout_height="100dp"
           android:textSize="25sp"
           android:text="@string/product_description"
           android:textAllCaps="false"/>
       <Button
           android:id="@+id/add_cart"
           android:layout_width="200dp"
           android:layout_height="50dp"
           android:textColor="@color/white"
           android:backgroundTint="@color/colorPrimary"
           android:text="@string/add_cart"/>

   </LinearLayout>
</LinearLayout>