<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:padding="10dp"
       android:orientation="vertical">
       <TextView
           android:id="@+id/order_no"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/order_no"
           android:textColor="@color/colorPrimary"
           android:textSize="15sp"
           android:textAllCaps="false"/>
       <TextView
           android:id="@+id/order_names"
           android:layout_width="match_parent"
           android:text="@string/product_names"
           android:textColor="@color/black"
           android:textSize="15sp"
           android:lines="1"
           android:layout_height="wrap_content"/>
       <TextView
           android:id="@+id/order_time"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:text="@string/order_time"/>
   </LinearLayout>
</LinearLayout>