<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_margin="15dp"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <ImageView
           android:id="@+id/product_icon"
           android:layout_width="160dp"
           android:scaleType="fitXY"
           android:layout_height="160dp"

           android:src="@mipmap/loading" />
       <TextView
           android:id="@+id/product_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:maxLines="1"
           android:text="@string/product_name"
           android:textAllCaps="false"
           android:textColor="@color/black"
           android:textSize="18sp"/>

       <TextView
           android:id="@+id/product_description"
           android:layout_width="wrap_content"
           android:layout_height="50dp"
           android:text="@string/product_description"
           android:textAllCaps="false"
           android:textSize="15sp" />

       <TextView
           android:id="@+id/product_price"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:maxLines="1"
           android:text="@string/product_price"
           android:textAllCaps="false"
           android:textColor="@color/colorPrimary"
           android:textSize="15sp"/>
   </LinearLayout>
</LinearLayout>