<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bottom_home_selector" />

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bottom_order_selector"

            />

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bottom_me_selector"/>

        <TextView
            android:id="@+id/tv_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me" />
    </LinearLayout>
</LinearLayout>