<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

   <LinearLayout
       android:layout_width="0dp"
       android:layout_weight="3"
       android:layout_height="wrap_content"
       android:clickable="true"
       android:focusable="true"
       android:orientation="horizontal">
       <ImageView
           android:id="@+id/product_icon"
           android:layout_width="160dp"
           android:layout_height="160dp"
           android:scaleType="fitXY"
           android:src="@mipmap/loading" />

       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="2"
           android:gravity="center"
           android:orientation="vertical">

           <TextView
               android:id="@+id/product_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLines="1"
               android:padding="10dp"
               android:text="@string/product_name"
               android:textAllCaps="false"
               android:textColor="@color/black"
               android:textSize="20sp" />

           <TextView
               android:id="@+id/product_description"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLines="1"
               android:padding="10dp"
               android:text="@string/product_description"
               android:textAllCaps="false"
               android:textSize="20sp" />

           <TextView
               android:id="@+id/product_price"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLines="1"
               android:padding="10dp"
               android:text="@string/product_price"
               android:textAllCaps="false"
               android:textColor="@color/colorPrimary"
               android:textSize="20sp" />
       </LinearLayout>

   </LinearLayout>

    <ImageView
        android:id="@+id/product_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:src="@drawable/delete" />
</LinearLayout>